<resources>
    <string name="app_name" translatable="false">Stock Hawk</string>

    <string name="pref_stocks_initialized_key" translatable="false">initialized</string>

    <string name="pref_stocks_key" translatable="false">stocks</string>
    <string name="pref_stock_status_key" translatable="false">stock_status</string>


    <string name="pref_display_mode_key" translatable="false">displayMode</string>
    <string name="pref_display_mode_default" translatable="false">@string/pref_display_mode_percentage_key</string>

    <string name="pref_display_mode_absolute_key" translatable="false">absolute</string>
    <string name="pref_display_mode_percentage_key" translatable="false">percentage</string>

    <string name="default_stocks_yahoo" translatable="false">YHOO</string>
    <string name="default_stocks_apple" translatable="false">AAPL</string>
    <string name="default_stocks_microsoft" translatable="false">MSFT</string>
    <string name="default_stocks_facebook" translatable="false">FB</string>


    <string name="action_change_units" translatable="false">@string/pref_display_mode_key</string>


    <string name="dialog_title">Add Stock</string>
    <string name="dialog_hint">Symbol (e.g. GOOG)</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="dialog_add">Add</string>

    <string name="error_no_network" translatable="true">No network connectivity! Will load stock cursor when the network is available.</string>
    <string name="error_no_stocks" translatable="true">No stocks added! Hit the floating action button to add one.</string>
    <string name="error_empty_stock" translatable="true">Stock information is not available</string>
    <string name="error_server_down" translatable="true">The server is temporarily unavailable</string>
    <string name="error_server_invalid" translatable="true">Stock information is not available. Please try again, if the problem persist please contact us!</string>
    <string name="error_unknown" translatable="true">Stock information is not available</string>
    <string name="error_invalid_symbol" translatable="true">Invalid symbol</string>

    <string name="toast_stock_added_no_connectivity" translatable="true">Symbol %s added. Will refresh when network available.</string>
    <string name="toast_no_connectivity" translatable="true">Will refresh when network available.</string>


    <!--A11y strings-->
    <string name="a11y_fab_add_stock" translatable="false">Add a new Stock.</string>

    <!--widget-->
    <string name="title_widget_quotes">Stock Hawk</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>


</resources>
